<resources>
    <string name="app_name">Mess Fee</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="todo">TODO</string>
    <string name="fee_detail">FEE DETAIL</string>
    <string name="notification">NOTIFICATION</string>
    <string name="pay">PAY</string>
    <string name="print">PRINT</string>
    <string name="student_details">Student Details</string>
    <string name="make_a_bill">Make a Bill</string>
    <string name="add_item">Add Item</string>
    <string name="food_item">Food Item</string>
    <string name="add_new_food">Add New Food</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="roll_number">Roll Number</string>
    <string name="name">Name</string>
    <string name="student_list">Student List</string>
    <string name="enter_quantity">Enter Quantity</string>
</resources>