<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:stretchColumns="1,2"
    tools:context=".StudentList">
    <TextView
        android:id="@+id/hostelStudent"
        android:text="@string/student_list"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <TableRow>
        <TextView
            android:text="@string/roll_number"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_column="1"/>
        <TextView
            android:text="@string/name"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_column="2"/>
    </TableRow>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</TableLayout>