<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:gravity="center"
        android:background="#CDDC39"
        android:text="@string/add_new_food" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item_name" />

    <EditText
        android:id="@+id/idName"
        android:background="@drawable/rounded"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:inputType="text"
        android:autofillHints="" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item_price" />

    <EditText
        android:id="@+id/idPrice"
        android:background="@drawable/rounded"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:text="@string/add" />

</LinearLayout>