<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Billing">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/student"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/save"
            android:layout_marginEnd="80dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/save"
            android:background="@drawable/ic_baseline_save_24"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/cancel"
            android:layout_marginStart="80dp"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="ButtonOrder" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_person_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rv1"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="@+id/rv1"
            app:srcCompat="@drawable/ic_baseline_add_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>