<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter password"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editUser" />

    <EditText
        android:id="@+id/editUser"
        android:background="@drawable/rounded"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="@string/user_name"

        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="Enter email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />
</androidx.constraintlayout.widget.ConstraintLayout>